Add test script to package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,14 @@
 {
+
+
   "name": "room-allocation-backend",
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
