--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+USER node  # <-- ADD THIS LINE
 RUN npm run build
 
 # Step 2: Serve with Nginx
