Fix Dockerfile permissions with chown

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,17 +3,13 @@ FROM node:18-alpine AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-
-# Fix permissions and rebuild
+COPY --chown=node:node . . # <-- CHANGE THIS LINE
 USER node
-RUN mkdir /home/node/.npm && chown node:node /home/node/.npm
-COPY --chown=node:node . /home/node/app
-WORKDIR /home/node/app
 RUN npm run build
 
 # Step 2: Serve with Nginx
 FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
-COPY --from=build /home/node/app/dist .
+COPY --from=build /app/dist .
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
