Switch to node:18 base image

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,10 @@
 # Step 1: Build Vite app
-FROM node:18-alpine AS build
+FROM node:18 AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-# Temporarily switch back to root to force the build
-# This is a less secure but reliable fix
-USER root 
 RUN npm run build
-# Switch to a non-root user for the final image if needed
-USER node 
 
 # Step 2: Serve with Nginx
 FROM nginx:alpine
